# AIAgentBook

./: .env.template  .gitignore  main.py  pytest.ini  requirements.txt  プロンプト_確認プロンプト.txt  プロンプト（kiroCLI）.txt  確認プロンプト.txt
artifacts/06_code-generation/src/: .env.template  .gitignore  README.md  conftest.py  e2e_test.py  main.py  pyproject.toml
artifacts/06_code-generation/src/agents/: base_agent.py  expense_agent.py  general_expense_agent.py  orchestrator_agent.py  transport_agent.py  transportation_expense_agent.py
artifacts/06_code-generation/src/config/: model_config.py  settings.py
artifacts/06_code-generation/src/docs/: orchestrator_agent_explanation.md  transportation_expense_agent_explanation.md  transportation_tools_explanation.md
artifacts/06_code-generation/src/evals/: __init__.py  eval_agent_routing.py  eval_expense_application.py  eval_goal_success_rate.py  eval_routing_accuracy.py  eval_tool_selection.py  eval_transport_application.py  helpers.py
artifacts/06_code-generation/src/guardrails/: guardrails_cloudformation.yaml
artifacts/06_code-generation/src/handlers/: console_approval_adapter.py  error_handler.py  human_approval_hook.py  loop_control_hook.py
artifacts/06_code-generation/src/knowledge/: __init__.py  application_policies.py  expense_policies.py  general_expense_policies.py  orchestrator_policies.py  receipt_policies.py  transport_policies.py  transportation_expense_policies.py  transportation_policies.py
artifacts/06_code-generation/src/models/: data_models.py
artifacts/06_code-generation/src/output/: 交通費精算申請書_20260520_012901.xlsx  交通費精算申請書_20260521_151413.xlsx  交通費精算申請書_20260521_151937.xlsx  経費精算申請書_20260521_151701.xlsx
artifacts/06_code-generation/src/prompt/: prompt_expense.py  prompt_general_expense.py  prompt_orchestrator.py  prompt_specialist_expense.py  prompt_specialist_transport.py  prompt_transport.py  prompt_transportation_expense.py
artifacts/06_code-generation/src/session/: session_manager.py
artifacts/06_code-generation/src/tests/: conftest.py  e2e_test.py
artifacts/06_code-generation/src/tests/integration/: test_agent_integration.py  test_agent_routing.py  test_expense_flow.py  test_session_integration.py  test_session_persistence.py  test_tool_call_flow.py  test_tool_integration.py
artifacts/06_code-generation/src/tests/unit/: test_agents.py  (+27 more)
artifacts/06_code-generation/src/tools/: output_generator.py  transport_calculator.py  transport_tools.py  transportation_tools.py
(+263 files in other folders)
